--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.9'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.4'
 }
 
 javafx {
