--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'org.jboss.resteasy', name: 'resteasy-jaxb-provider', version: '2.3.3.Final'
+    implementation group: 'org.jboss.resteasy', name: 'resteasy-jaxrs', version: '3.9.1.Final'
+    implementation group: 'org.jboss.resteasy', name: 'jaxrs-api', version: '3.0.12.Final'
+    testCompile group: 'org.jboss.resteasy', name: 'resteasy-jaxrs-testsuite', version: '3.0.19.Final'
+    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.9.9'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0.1'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.6'
