--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 server=http://127.0.0.1:8080/
 service=api/demo/
 clients=clients/
-getByFio=get-by-fio/
+searchClients=search-clients/
 visits=visits/
 getYearVisits=get-year-visits/
 tests=tests/
