--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,6 @@ dependencies {
     implementation group: 'org.jboss.resteasy', name: 'jaxrs-api', version: '3.0.12.Final'
     testCompile group: 'org.jboss.resteasy', name: 'resteasy-jaxrs-testsuite', version: '3.0.19.Final'
     implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.9.9'
-
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0.1'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.6'
@@ -29,6 +28,8 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.4'
+
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.9'
 }
 
 javafx {
