расчет абонемента на сервере расчет стоимости нового абонемента перенесён с клиента на сервер

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,4 +4,4 @@ clients=clients/
 visits=visits/
 getYearVisits=quantity-visited-days/
 tests=tests/
-membershipCardCost = 20000
+cardCost=card-cost/
